# trip-agent

./: .env.example  .gitignore  Copenhagen-2025-07-30-2025-08-01.md  PLANNING.md  README.md  TASK.md  TASKS.md  attractions_with_distances.json  cph_test_report.md  extracted_attractions.json  main.py  pyproject.toml  requirements.txt  test_attraction_extraction.py  test_destination_research.py  test_distance_calculator.py  test_trip_planning_alt_agent.py  test_trip_planning_react_agent.py  trip-plan-Copenhagen-2025-07-30-2025-08-01.md  trip_plan.md  trip_plan_alt.md
src/: __init__.py
src/agents/: __init__.py  base.py  user_interface.py
src/agents/attraction_extraction/: __init__.py  attraction_extraction.py  models.py
src/agents/destination_research_assistant/: __init__.py  destination_report.py  graph.py  models.py
src/agents/initial_agents/: destination_information.py  itinerary_optimization.py  local_events.py  orchestrator.py
src/agents/trip_planning_alt/: __init__.py  trip_planning_alt.py
src/agents/trip_planning_react/: __init__.py  tools.py  trip_planning_react.py
src/api/: __init__.py  app.py
src/memory/: __init__.py  vector_store.py
src/models/: __init__.py  preferences.py  trip.py
src/ui/: __init__.py  app.py
src/utils/: __init__.py  distance_calculator.py
src/workflows/: __init__.py  trip_planning.py
tests/: __init__.py
tests/agents/: __init__.py  test_attraction_extraction.py  test_base_agent.py  test_destination_report.py  test_research_coordinator.py  test_user_interface_agent.py
tests/agents/trip_planning/: __init__.py  (+1 more)
